--- a/gaze_project/dataCollection/QA_survey/templates/src/index.scss
+++ b/gaze_project/dataCollection/QA_survey/templates/src/index.scss
@@ -1,1 +1,142 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  // font-family: 'Noto Sans Korean', Arial, Helvetica;
+  font-family: 'Roboto', sans-serif;
+}
 
+h1, h2, h3, p, ul {
+  margin: 0;
+}
+ul {
+  list-style: none;
+}
+
+.app {
+  // width:1200px;
+  width: 100%;
+  height: 100%;
+  border: 1px red solid;
+  box-sizing: border-box;
+}
+
+.content {
+  box-sizing: border-box;
+  border: 1px blue solid;
+  background-color: #fff;
+  
+  display: flex;
+  flex-direction: row;
+  // align-items: flex-start;
+  // justify-content: flex-start;
+  width: 100%;
+  height: 80%;
+  color: #555;
+  .bodyDiv{
+    width: 100%;
+    height: 100%;
+    border: 1px black solid;
+
+    .topDiv {
+      width: 100%;
+      height: 8%;
+      border: 1px green solid;
+    }
+    .bodyContDiv {
+      width: 100%;
+      height: 80%;
+      border: 1px yellow solid;
+    }
+    .footDiv {
+      width: 100%;
+      height: 5%;
+      border: 1px purple solid;
+    }
+
+  }
+  
+  
+  .page-header {
+    display: flex;
+    flex-direction: row;
+    height: 60px;
+    margin-bottom: 15px;
+    padding-left: 15px;
+    /*margin: -20px -20px 5px -20px;*/
+    align-items: center;
+    // background-color: #f5f5f5;
+    // background-color: #3a3a3a;
+    background:linear-gradient(-45deg, transparent 15px, #3a3a3a 0);
+    color: white;
+  }
+  .section-header {
+    // margin-left: 1px;
+    margin-right: 1px;
+    // margin-top: 1px;
+    display: grid;
+    width: 100%;
+    height: 30px;
+    padding-left: 10px;
+    align-content: center;
+    // background-color: #3a3a3a;
+    background:linear-gradient(-45deg, transparent 20px, #525252 0);
+    color: white;
+  }
+  .section-subtitle-header {
+    margin-right: 1px;
+    display: grid;
+    width: 300px;
+    height: 25px;
+    padding-left: 10px;
+    align-content: center;
+    // background:linear-gradient(-45deg, transparent 20px, #525252 0);
+    background:#525252;
+    color: white;
+  }
+  
+  .page-section {
+    margin: 0px 0px;
+  }
+  .button-wrapper {
+    text-align: right;
+  }
+  .submit-button {
+    padding: 5px;
+    color: white;
+    background-color: gray;
+    border: none;
+    cursor: pointer;
+
+    &:hover {
+      background-color: black;
+    }
+  }
+}
+
+.footer {
+  // grid-column: 2;
+  font-size: .8em;
+  text-align: center;
+  color: #aaa;
+  
+  hr {
+    width: 50%;
+    margin: 0 auto;
+    border: none;
+    border-top: 1px solid #ddd;
+  }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+#logo{
+  width: 28px;
+  height: 20px;
+  margin-right: 15px;
+  background-image: url("./image/logo_gray.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
